--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
-  "semi": false,
   "singleQuote": true,
+  "semi": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "arrowParens": "avoid",
-  "jsxSingleQuote": false,
-  "useTabs": false
+  "arrowParens": "always",
+  "printWidth": 100
 }
