--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,6 @@
 BASEURL=/api/v1
-PORT=3000
 -----------------------------------------------------
-DBURI=mongodb://localhost:27017/E-Commerce
+DBURI=mongodb+srv://Ragab:ay7aga@cluster1.k2hjlnd.mongodb.net/E-Commerce
 -----------------------------------------------------
 SALTROUND=9
 EMAILTOKEN=AYHAGA
