--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "e-commerce-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "20.9.0"
+  },
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "format": "prettier --write ."
   },
   "keywords": [],
@@ -15,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
