--- a/config/.env
+++ b/config/.env
@@ -14,4 +14,4 @@ API_SECRET=WruvKFt4rmj6yuUg1hfZ6s9CLwk
 NODEMAILEREMAIL=mohamedahmedr8809@gmail.com
 NODEMAILERPASSWORD=rxyjsaunwxgblwfs
 -----------------------------------------------------
-MODE=DEV
+MODE=DEPLOY
